packages/infra/instance.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}


resource "aws_key_pair" "ssh_key" {
    key_name = "bombers-app"
    public_key = file("${path.module}/id_rsa.pub")

    lifecycle {
        prevent_destroy = true
    }
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"]
}

resource "aws_instance" "bomber_app" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  key_name = aws_key_pair.ssh_key.key_name
  security_groups = [aws_security_group.security_group.name]
  user_data = file("init.sh")

  tags = {
    Name = var.instance_name
  }
}
